Added get function
